cmake_minimum_required(VERSION 3.10)
project(RTOS_COMPILER C)

if (CMAKE_C_COMPILER_ID MATCHES ARMCC)
    set(RTOS_COMPILER_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/ARMCC CACHE STRING ""   FORCE)
elseif (CMAKE_C_COMPILER_ID MATCHES GNU)
    set(RTOS_COMPILER_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/GCC CACHE STRING "" FORCE)
endif ()

include_directories(${RTOS_COMPILER_SOURCE_DIR})

file(GLOB SOURCES ${RTOS_COMPILER_SOURCE_DIR}/*.c)
foreach (item IN LISTS SOURCES)
    message(STATUS "[${PROJECT_NAME}] SOURCE: ${item}")
endforeach ()

add_library(${PROJECT_NAME} ${SOURCES})
target_include_directories(${PROJECT_NAME} PUBLIC ${RTOS_COMPILER_SOURCE_DIR})

